@@ -5,3 +5,12 @@ src/main.cc
 src/interface.cc
 src/callbacks.cc
 src/support.c
+src/calclib/EqItem.cc
+src/calclib/Calculator.cc
+src/calclib/Manager.cc
+src/calclib/BuiltinFunctions.cc
+src/calclib/Function.cc
+src/calclib/Error.cc
+src/calclib/Unit.cc
+src/calclib/Variable.cc
+src/calclib/util.cc
